View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028820 | Open CASCADE | OCCT:Samples | public | 2017-06-06 17:56 | 2017-09-29 16:25 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028820: Samples - fix compilation of JAVA sample for Android | ||||
Description | The JAVA sample has compilation errors in current state. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28820 has been created by kgv. SHA-1: bb4c8a3a761e817c7266f741d9471918fe4cb814 Detailed log of new commits: Author: kgv Date: Tue Jun 6 17:59:57 2017 +0300 0028820: Samples - fix compilation of JAVA sample for Android |
|
Branch CR28820 has been updated forcibly by kgv. SHA-1: fcb4eed7f9edbf0fea6ba20b71a5a9682023ebd8 |
|
Please take the patch, testing is not needed. |
|
Dear BugMaster, Please integrate branch CR28820 into the occt git-repository master. |
|
Branch CR28820 has been deleted by kgv. SHA-1: fcb4eed7f9edbf0fea6ba20b71a5a9682023ebd8 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-06-06 17:56 | kgv | New Issue | |
2017-06-06 17:56 | kgv | Assigned To | => bugmaster |
2017-06-06 18:00 | git | Note Added: 0067148 | |
2017-06-06 18:01 | kgv | Relationship added | child of 0028088 |
2017-06-06 18:04 | git | Note Added: 0067149 | |
2017-06-06 18:04 | kgv | Note Added: 0067150 | |
2017-06-06 18:04 | kgv | Status | new => resolved |
2017-06-06 18:04 | kgv | Status | resolved => reviewed |
2017-06-06 18:32 |
|
Test case number | => Not needed |
2017-06-06 18:33 |
|
Note Added: 0067156 | |
2017-06-06 18:33 |
|
Status | reviewed => tested |
2017-06-09 14:06 | bugmaster | Changeset attached | => occt master b2857a7e |
2017-06-09 14:06 | bugmaster | Status | tested => verified |
2017-06-09 14:06 | bugmaster | Resolution | open => fixed |
2017-06-13 17:34 | git | Note Added: 0067356 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |