0028820: Samples - fix compilation of JAVA sample for Android